<resources>
    <string name="app_name">I\'m Ready</string>
    <string name="messages">Berichten</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClosed">Sluit</string>
    <string name="password_hint">Wachtwoord</string>
    <string name="username_hint">Email</string>
    <string name="login">Log in</string>
    <string name="logo">Logo</string>
    <string name="logout">Uitloggen</string>
    <string name="info">Informatie</string>
    <string name="family">Familie</string>
    <string name="input_message_hint">Voer hier een bericht in</string>
    <string name="send">Verstuur</string>
    <string name="activity_saved_info">Uitwerkingen worden tussentijds opgeslagen</string>
    <string name="hand_in">Inleveren</string>
    <string name="activity_input">Uitwerking van de opdracht</string>
    <string name="empty_username">Het email veld is leeg. Vul aub een email adres is</string>
    <string name="empty_password">Wachtwoord veld is leeg. Vul aub jouw wachtwoord in</string>
    <string name="close">sluit</string>
    <string name="welcome">Welkom %1$s</string>
    <string name="welcome_subtext">Er staan nog %1$s taken open die binnenkort af moeten zijn</string>
    <string name="deadline_days">Over %1$d dagen</string>
    <string name="unknown_error">Er is iets misgegaan. Probeer nog eens op een later moment.</string>
    <string name="default_username">Gebruiker</string>
    <string name="personal_block_failed">Kon het bouwplan niet ophalen. Probeer het later opnieuw.</string>
    <string name="plan">Toekomstplan</string>
    <string name="block_failed">Het toekomstplan kon niet opgehaald worden. Probeer het later nog eens.</string>
    <string name="component_count">%1$d componenten</string>
    <string name="add">toevoegen</string>
    <string name="ready_coins">READY-coins</string>
    <string name="assignments">Opdrachten</string>
    <string name="purpose">Beschrijving</string>
    <string name="enroll_component_failed">Er is iets misgegaan met het toevoegen van dit onderdeel aan je bouwplan. Probeer het later opnieuw.</string>
    <string name="months_left">Nog %1$d maanden</string>
    <string name="weeks_left">Nog %1$d weken</string>
    <string name="days_left">Nog %1$d dagen</string>
    <string name="email">Email</string>
    <string name="phone">Telefoon</string>
    <string name="address">Adres</string>
    <string name="birthdate">Geboortedatum</string>
    <string name="notes">Notities</string>
    <string name="appointments">Afspraken</string>
    <string name="login_failed">Er is iets misgegaan met inloggen. Je kunt het opnieuw proberen of offline werken</string>
    <string name="work_offline">Werk offline</string>
    <string name="retry">Try again</string>
    <string name="futureplan">Toekomstplan</string>
    <string name="personal_component_succes">%1$s succesvol toegevoegd!</string>
    <string name="refresh">Refresh</string>
    <string name="empty_component">Er zijn geen activiteiten gevonden.</string>
    <string name="hand_in_question">Inleveren?</string>
    <string name="hand_in_text">Wil je de uitwerking van de opdracht inleveren?\n\n Na het inleveren moet jouw begeleider de opdracht nog goedkeuren voordat jouw <![CDATA[<font color=#1BC771>READY-coins</font>]]> worden toegekend.</string>
    <string name="solution">Uitwerking</string>
    <string name="task">Taak</string>
    <string name="status">Status</string>
    <string name="status_done">Afgerond</string>
    <string name="status_pending">Wacht op goedkeuring</string>
    <string name="status_progress">Bezig</string>
    <string name="component_add_question">Toevoegen aan bouwplan?</string>
    <string name="component_add_text">Wil je dit component en de bijbehorende opdracht(en) toevoegen aan je bouwplan?<![CDATA[<br/><br/><font color=#F16122><b>Let-op! </b>Je kan de opdracht(en) niet zelf verwijderen zodra deze is toegevoegd</font>]]></string>
    <string name="activity_handed_in">Opdracht ingeleverd!</string>
    <string name="no_notes_available">Er zijn nog geen notities beschikbaar</string>
    <string name="function_not_available">Deze functie is nog niet beschikbaar</string>
    <string name="activity_feedback_by">Commentaar van %1$s</string>
    <string name="your_caregiver">je zorgverlener</string>
    <string name="empty_description">Geen beschrijving beschikbaar</string>
    <string name="user_info_failed">Kon de gebruikersgegevens niet ophalen</string>
    <string name="caretakers">Zorgverleners</string>
</resources>
