<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.inholland.imready.app.view.activity.client.ClientComponentEditActivity"
    android:padding="@dimen/md"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/button_positive">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_info_outline"
            android:drawablePadding="@dimen/sm"
            android:text="@string/purpose"/>
        <TextView
            android:id="@+id/component_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxl"
            android:layout_marginBottom="@dimen/md"
            style="@android:style/TextAppearance.DeviceDefault"
            tools:text="Hier staat beschreven wat het doel van dit onderdeel is en daarmee de toegevoegde waarde voor de client"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_coin"
            android:drawablePadding="@dimen/sm"
            android:text="@string/ready_coins"/>
        <TextView
            android:id="@+id/component_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxl"
            android:layout_marginBottom="@dimen/md"
            style="@android:style/TextAppearance.DeviceDefault"
            tools:text="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_assignment"
            android:drawablePadding="@dimen/sm"
            android:text="@string/assignments"/>
        <ListView
            android:id="@+id/activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxl"
            android:layout_marginBottom="@dimen/md"
            android:choiceMode="none"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            tools:listitem="@layout/simple_list_item"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/add"
        android:theme="@style/App.Button.Accent"/>

</RelativeLayout>
