<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nl.inholland.imready.app.view.activity.caregiver.ClientDetailActivity">
    <TextView
        android:id="@+id/clientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/md"
        android:layout_marginTop="@dimen/sm"
        android:background="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textStyle="bold"
        android:gravity="center"
        tools:text="Joep Bakker"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/lg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/md">
            <LinearLayout
                android:id="@+id/contentPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/sm"
                android:showDividers="middle"
                android:divider="@drawable/empty_divider_sm"
                android:layout_alignParentStart="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"/>
            </LinearLayout>
            <LinearLayout
                android:layout_toEndOf="@id/contentPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="@drawable/empty_divider_sm"
                android:orientation="vertical"
                android:layout_alignParentEnd="true">
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Joep@email.com"/>
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/function_not_available"/>
                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/function_not_available"/>
                <TextView
                    android:id="@+id/birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/function_not_available"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"

            android:divider="@drawable/empty_divider_sm">
            <include layout="@layout/list_item_caregiver_action_futureplan" android:id="@+id/futureplan"/>
            <include layout="@layout/list_item_caregiver_action_notes" android:id="@+id/notes_button"/>
            <include layout="@layout/list_item_caregiver_action_appointments" android:id="@+id/calendar_button"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/md">
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>
