<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/sm"
    xmlns:tools="http://schemas.android.com/tools">

    <CheckBox
        android:id="@+id/activity_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:enabled="false"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/activity_checkbox"
        android:layout_marginTop="6dp"
        android:layout_alignParentEnd="true">
        <RelativeLayout
            android:id="@+id/activity_info_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/sm">

            <LinearLayout
                android:id="@+id/activity_info"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/activity_deadline_container">
                <TextView
                    android:id="@+id/activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="Activity title"/>
                <TextView
                    android:id="@+id/activity_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Activity description" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/activity_deadline_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/Tinted.Accent"
                    android:src="@drawable/ic_clock"/>
                <TextView
                    android:id="@+id/activity_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxWidth="@dimen/xxml"
                    tools:text="over 2 dagen"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_action_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_info_container">

            <TextView
                android:id="@+id/activity_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/activity_input"
                style="@style/TextAppearance.AppCompat.Small"
                android:text="@string/activity_input"/>

            <EditText
                android:id="@+id/activity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:backgroundTint="@color/color_accent_states"
                android:enabled="false"
                android:minLines="1"
                android:maxLines="12"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:scrollbars="vertical"/>

            <RelativeLayout
                android:id="@+id/activity_button_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_input">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/activity_button"
                    android:padding="@dimen/xs"
                    android:text="@string/activity_saved_info"
                    style="@style/TextAppearance.AppCompat.Tiny"/>
                <Button
                    android:id="@+id/activity_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:theme="@style/App.Button.Accent"
                    android:text="@string/hand_in"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/waiting_for_approval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_button_container"
                android:layout_alignParentEnd="true"
                android:text="@string/status_pending"
                android:textSize="@dimen/sm"
                android:textColor="@color/colorAccent"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_clock"
                android:drawableTint="@color/colorAccent"
                android:drawablePadding="@dimen/xxs"
                android:visibility="gone"
                tools:visibility="visible"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>