<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nl.inholland.imready.app.view.activity.caregiver.CaregiverFeedbackActivity">
    <TextView
        android:id="@+id/clientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/md"
        android:layout_marginTop="@dimen/sm"
        android:background="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textStyle="bold"
        android:drawableEnd="@drawable/ic_settings"
        android:gravity="center"
        tools:text="Joep Bakker"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/lg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/md">
            <LinearLayout
                android:id="@+id/contentPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/sm"
                android:showDividers="middle"
                android:divider="@drawable/empty_divider_sm"
                android:layout_alignParentStart="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"/>
                <TextView
                    android:layout_marginTop="@dimen/md"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solution"/>
            </LinearLayout>
            <LinearLayout
                android:layout_toEndOf="@id/contentPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="@drawable/empty_divider_sm"
                android:orientation="vertical"
                android:layout_alignParentEnd="true">
                <TextView
                    android:id="@+id/task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Taak #1"/>
                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Wacht op goedkeuring"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/empty_divider_sm">
            <EditText
                android:id="@+id/client_input"
                style="@style/App.Text.Input"
                android:textColor="@color/colorDark"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Ik heb 3 verschillende appartementen gevonden. Een in het centrum van Haarlem, een aan de rand van Amsterdam en de laatste is in Amsterdam Sloterdijk."/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>